[MODUSERS-360] - Code smells refactoring